Prevent footer from jumping and hide popover btn

--- a/themes/custom/fki/src/less/template/elements/popover-button.less
+++ b/themes/custom/fki/src/less/template/elements/popover-button.less
@@ -22,6 +22,7 @@
 
 // Popover button
 .popover-button {
+	display: none !important;
 	position: absolute;
 	right: floor( (0 - @popover-button-width) );
 	width: 250px;
@@ -72,7 +73,7 @@
 	.fki-mixin-popover-button(@state-tertiary-bg, @state-tertiary-text);
 
 	.feedback-form {
-		display: block !important;
+		//display: block !important;
 	}
 
 	#feedback-status-message {
