--- a/themes/custom/fki/src/less/template/page-layout/footer.less
+++ b/themes/custom/fki/src/less/template/page-layout/footer.less
@@ -159,6 +159,10 @@
 // Mobile
 @media @media-query-mobile {
 
+  .inner-wrapper {
+    padding-bottom: 999px;
+  }
+
   // Footer
   .footer {}
 }
@@ -252,6 +256,10 @@
 // Desktop
 @media @media-query-desktop {
 
+  .inner-wrapper {
+    padding-bottom: 558px;
+  }
+
   // Footer
   .footer {}
 }
@@ -277,6 +285,10 @@
 
 // Large desktop
 @media @media-query-large-desktop {
+
+  .inner-wrapper {
+    padding-bottom: 580px;
+  }
 
   // Footer
   .footer {}
